# difference-generator

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-make-lint.yml  hexlet-make-test.yml  hexlet-tests.yml
gendiff/: __init__.py  cli.py  dicts_diff.py  diff.py  file_parse.py  parser.py
gendiff/formatters/: format.py  json.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/logic/: diff.py  file_parse.py  generate_diff.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: answer1.txt  answer2.txt  json_answer.txt  test_generate_fixture2.json  test_generate_fixture3.yaml  test_generate_fixture4.yml
